# agentic-firmenbuch

./: .dockerignore  .env.example  .gitignore  AGENT_PLAYBOOK.md  AGENT_TODO_directory-deploy.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  TODO_search-quality.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: user-feedback.yml
.github/workflows/: ci.yml  deploy-website.yml  feedback-agent.yml  notify-owner.yml  notify-reporter.yml  pr-review.yml
.grind/: backfill_ebit.py  golden.json  grind2.py  patch_nulls.py
api/: .gitignore  README.md  asgi.py  function_app.py  host.json  local.settings.json.sample  requirements.txt
docs/: API_PROBE_FINDINGS.md  Banken_Versicherer_v1.md  DIRECTORY_SUBMISSION.md  Distribution_Spezifikation.md  Erweiterungen_Spezifikation.md  FIELD_REFERENCE.md  Fachliche_Spezifikation.md  Fachliche_Spezifikation_v1.md  MCP_TOOL_DESIGN.md  PROPOSED_MCP_CONTRACT.md  README.md  Rechtsform_Coverage.md  Technische_Spezifikation.md  Technische_Spezifikation_v1.md  Usage_Metering_v1.md  V2_Spezifikation.md  branch_classification_analysis.md  feedback-agent.md  pipeline-step-samples.md
docs/architecture/: data-collection.md
docs/classification/: README.md  branch_classification_analysis.md
docs/events/: EVENTS_FEATURE.md
docs/monorepo/: ADDING_A_PRODUCT.md  DE_PRODUCT_SETUP.md
docs/reference/: JustizOnline_API_Complete_Reference.md  README.md
docs/reference/ediktsdatei/: README.md
docs/reference/gisa/: GISA_XML-Struktur_v2.xlsx
docs/reference/jab40_struktur/: 4.00_Struktur_JAb_2026_03_11-V31.xlsx  BilanzErgebnis.xsd  JAb_4_00-Uebermittlung.xsd  change-log.md
docs/reference/oenace/: README.md
docs/reference/oenb/: README.md  Sektor_ESVG_SL_Schluessel_2026-06-28.xlsx
docs/reference/stripe-sample/: PATTERNS.md  README.stripe.md  requirements.txt  server.py
docs/reference/stripe-sample/public/: checkout.html
docs/research/: banks_BWG_schema.md  ediktsdatei_insolvency.md  insurers_VAG_schema.md  jab40_bank_insurer_support.md
docs/specs/: Distribution_Spezifikation.md  Erweiterungen_Spezifikation.md  Fachliche_Spezifikation.md  README.md  Technische_Spezifikation.md
docs/telemetry/: QUERIES.md
infra/: README.md  main.bicep  setup.sh  teardown.sh
infra/docker/: mcp.Dockerfile  pipeline.Dockerfile  signup.Dockerfile
infra/modules/: acr.bicep  communication.bicep  containerapps.bicep  cosmos.bicep  identity.bicep  keyvault.bicep  monitoring.bicep  rbac.bicep  storage.bicep
products/: README.md
products/agentic-firmenbuch/: README.md
products/agentic-firmenbuch/tests/: README.md  test_layer_completeness.py
products/agentic-firmenbuch/tests/e2e/: README.md
products/agentic-firmenbuch/tests/eval/: fixtures.py  golden_search.yaml  test_eval_ci.py
products/agentic-firmenbuch/tests/fixtures/consolidated_examples/: schubert_093450b.json
products/agentic-firmenbuch/tests/fixtures/directories/: oenb_mfi_sample.csv
products/agentic-firmenbuch/tests/fixtures/raw/490875a_multiyear/: 490875a_2018-12-31.xml  490875a_2021-12-31.xml
scripts/: backfill-status.sh  build_plz_bundesland.py  build_plz_geo.py  create_invite.py  demo_load.py  dev_billing_server.py  eval_search.py  eval_tier2.py  extract_oenace_crosswalk.py  grant_pro.py  measure_search_perf.py  migrate_accounts_to_legacy.py  process-status.sh  status.sh  stripe_test_setup.py  sync_registry_smoke.py  usage_report.py
tests/: README.md  test_layer_completeness.py
tests/e2e/: README.md  test_live_e2e.py
tests/fixtures/consolidated_examples/: grama_trade_032616s.json
tests/fixtures/raw/: 030435h_2020-03-31_jb.xml  030536g_2025-12-31_jab40.xml  030636d_2023-05-31_jb.xml
tests/fixtures/raw/490875a_multiyear/: 490875a_2019-12-31.xml  490875a_2020-12-31.xml  490875a_2022-12-31.xml  490875a_2023-12-31.xml  490875a_2024-12-31.xml
website/: 404.html  README.md  cowork.en.html  cowork.html  datenschutz.en.html  datenschutz.html  en.html  feedback.en.html  feedback.html  felder.en.html  felder.html  firmenbuch-ki.en.html  firmenbuch-ki.html  for-agents.html  fuer-agenten.html  impressum.en.html  impressum.html  index.html  kuendigen.en.html  kuendigen.html  llms.txt  nutzungsbedingungen.en.html  nutzungsbedingungen.html  onboarding.en.html  onboarding.html  playground.en.html  playground.html  robots.txt  sitemap.xml  staticwebapp.config.json  try.en.html  try.html  verified.en.html  verified.html  verify-fehler.en.html  verify-fehler.html  willkommen.en.html  willkommen.html
website/.well-known/: mcp-registry-auth
