[project]
name = "agentic-firmenbuch"
version = "1.0.0"
description = "Live automated Azure data pipeline over the Austrian Firmenbuch HVD, served via a multi-tenant MCP server (Version 1)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "fbl-core",
    "fbl-registry",
    "fbl-parse",
    "fbl-firmenbuch-client",
    "fbl-ingest",
    "fbl-consolidate",
    "fbl-derive",
    "fbl-present",
    "fbl-orchestration",
    "fbl-auth",
    "fbl-mcp-server",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
fbl-core = { workspace = true }
fbl-registry = { workspace = true }
fbl-parse = { workspace = true }
fbl-firmenbuch-client = { workspace = true }
fbl-ingest = { workspace = true }
fbl-consolidate = { workspace = true }
fbl-derive = { workspace = true }
fbl-present = { workspace = true }
fbl-orchestration = { workspace = true }
fbl-auth = { workspace = true }
fbl-mcp-server = { workspace = true }

# ---------------------------------------------------------------------------
# Shared tooling configuration (applies to the whole workspace)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/core/src", "packages/99_registry/src", "packages/firmenbuch_client/src", "packages/90_ingest/src", "packages/70_parse/src", "packages/50_consolidate/src", "packages/30_derive/src", "packages/10_present/src", "packages/orchestration/src", "packages/auth/src", "packages/mcp_server/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "RUF"]
# N999: module name rules (appendix data file etc.). RUF001/002/003: "ambiguous" Unicode —
# this is a German-content product (en dashes, umlauts, § in user-facing copy), all intentional.
ignore = ["N999", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011"]
# Error class names mirror the §9 MCP error codes (NotFound/Unauthorized/...) on purpose.
"packages/mcp_server/src/fbl_mcp_server/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["packages"]
# All package sources + the tests dirs that expose importable helper modules.
mypy_path = ["packages/core/src", "packages/99_registry/src", "packages/firmenbuch_client/src", "packages/90_ingest/src", "packages/70_parse/src", "packages/50_consolidate/src", "packages/30_derive/src", "packages/10_present/src", "packages/orchestration/src", "packages/auth/src", "packages/mcp_server/src", "packages/70_parse/tests", "packages/firmenbuch_client/tests", "packages/90_ingest/tests", "packages/orchestration/tests"]
explicit_package_bases = true
namespace_packages = true
# conftest.py exists once per tests dir (pytest plumbing); exclude to avoid the
# "duplicate module named conftest" clash. They contain no typed logic.
exclude = "tests/conftest\\.py$"

[[tool.mypy.overrides]]
module = ["azure.*", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
python_files = ["test_*.py"]
addopts = "-q --import-mode=importlib"

[tool.coverage.run]
source = ["fbl_core", "fbl_registry", "fbl_parse", "fbl_firmenbuch_client", "fbl_ingest", "fbl_consolidate", "fbl_derive", "fbl_present", "fbl_orchestration", "fbl_auth", "fbl_mcp_server"]
