[project]
name = "agentic-firmenbuch"
version = "1.0.0"
description = "Live automated Azure data pipeline over the Austrian Firmenbuch HVD, served via a multi-tenant MCP server (Version 1)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "fbl-core",
    "fbl-core-at",
    "fbl-registry",
    "fbl-parse",
    "fbl-firmenbuch-client",
    "fbl-ingest",
    "fbl-consolidate",
    "fbl-derive",
    "fbl-present",
    "fbl-orchestration",
    "fbl-auth",
    "fbl-mcp-server",
    "stripe>=11",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
package = false

[tool.uv.workspace]
# Shared, source-agnostic packages live in packages/; the Austria product's
# stage packages live under products/agentic-firmenbuch/packages/ (agentic-first monorepo).
members = ["packages/*", "products/agentic-firmenbuch/packages/*"]

[tool.uv.sources]
fbl-core = { workspace = true }
fbl-core-at = { workspace = true }
fbl-registry = { workspace = true }
fbl-parse = { workspace = true }
fbl-firmenbuch-client = { workspace = true }
fbl-ingest = { workspace = true }
fbl-consolidate = { workspace = true }
fbl-derive = { workspace = true }
fbl-present = { workspace = true }
fbl-orchestration = { workspace = true }
fbl-auth = { workspace = true }
fbl-mcp-server = { workspace = true }

# ---------------------------------------------------------------------------
# Shared tooling configuration (applies to the whole workspace)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored third-party reference code, kept verbatim (only the hard-coded key was scrubbed) — not ours to lint.
extend-exclude = ["docs/reference/stripe-sample"]
src = ["packages/core/src", "packages/auth/src", "products/agentic-firmenbuch/packages/core_at/src", "products/agentic-firmenbuch/packages/99_registry/src", "products/agentic-firmenbuch/packages/firmenbuch_client/src", "products/agentic-firmenbuch/packages/90_ingest/src", "products/agentic-firmenbuch/packages/70_parse/src", "products/agentic-firmenbuch/packages/50_consolidate/src", "products/agentic-firmenbuch/packages/30_derive/src", "products/agentic-firmenbuch/packages/10_present/src", "products/agentic-firmenbuch/packages/orchestration/src", "products/agentic-firmenbuch/packages/mcp_server/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "RUF"]
# N999: module name rules (appendix data file etc.). RUF001/002/003: "ambiguous" Unicode —
# this is a German-content product (en dashes, umlauts, § in user-facing copy), all intentional.
ignore = ["N999", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011"]
# Error class names mirror the §9 MCP error codes (NotFound/Unauthorized/...) on purpose.
"products/agentic-firmenbuch/packages/mcp_server/src/fbl_mcp_server/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["packages", "products"]
# All package sources + the tests dirs that expose importable helper modules.
mypy_path = ["packages/core/src", "packages/auth/src", "products/agentic-firmenbuch/packages/core_at/src", "products/agentic-firmenbuch/packages/99_registry/src", "products/agentic-firmenbuch/packages/firmenbuch_client/src", "products/agentic-firmenbuch/packages/90_ingest/src", "products/agentic-firmenbuch/packages/70_parse/src", "products/agentic-firmenbuch/packages/50_consolidate/src", "products/agentic-firmenbuch/packages/30_derive/src", "products/agentic-firmenbuch/packages/10_present/src", "products/agentic-firmenbuch/packages/orchestration/src", "products/agentic-firmenbuch/packages/mcp_server/src", "products/agentic-firmenbuch/packages/70_parse/tests", "products/agentic-firmenbuch/packages/firmenbuch_client/tests", "products/agentic-firmenbuch/packages/90_ingest/tests", "products/agentic-firmenbuch/packages/orchestration/tests"]
explicit_package_bases = true
namespace_packages = true
# conftest.py exists once per tests dir (pytest plumbing); exclude to avoid the
# "duplicate module named conftest" clash. They contain no typed logic.
exclude = "tests/conftest\\.py$"

[[tool.mypy.overrides]]
module = ["azure.*", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "products"]
python_files = ["test_*.py"]
addopts = "-q --import-mode=importlib"

[tool.coverage.run]
source = ["fbl_core", "fbl_core_at", "fbl_registry", "fbl_parse", "fbl_firmenbuch_client", "fbl_ingest", "fbl_consolidate", "fbl_derive", "fbl_present", "fbl_orchestration", "fbl_auth", "fbl_mcp_server"]
